--- a/indexuwatec.html
+++ b/indexuwatec.html
@@ -12,20 +12,20 @@
       <div>
         <div class="Uwatec">Uwatec</div>
         <div class="About">About</div>
-        <div class="Contact">Contact: <br>-</br> <a href="hi@uwatec.net">hi@uwatec.net</a></div>
+        <div class="Contact">Contact: <br>-<br> <a href="hi@uwatec.net">hi@uwatec.net</a></div>
       </div>
 
       <div>
       <img src="api.jpg" alt="something" class="img">
       <h3 class="topical_technologies" >
-        Topical Technologies <br>Of Tomottow</br>
+        Topical Technologies <br>Of Tomottow
       </h3>
       </div>
 
     </article>
 
         <div class="downland">
-            <p class="Pdownland">Downland<br>Presentation</br></p>      
+            <p class="Pdownland">Downland<br>Presentation</p>      
             <div class="downlandre">
               <p class="eng"><a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D0%BF%D0%B8%D0%B1%D0%B0%D1%80%D0%B0">ENG</a></p>
               <p class="rus"><a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D0%BF%D0%B8%D0%B1%D0%B0%D1%80%D0%B0">RUS</a></p>
